fasto/tests/fail_mips_div0.err
Code generator error: Tried to divide by 0 at line 2, column 22
