fasto/tests/fail_mips_div0.fo
fun int main () =
    let tmp = write(3/0) in
    0